kubernetes-example-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-http
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
